language_tests/source_files/invalid/recursive_conformance_cycle.tr
interface CycleA {}
interface CycleB {}

struct CycleLeaf[T] {
    value: T
}

impl[T] CycleA for CycleLeaf[T] where CycleLeaf[T]: CycleB {}
impl[T] CycleB for CycleLeaf[T] where CycleLeaf[T]: CycleA {}

func requireCycleA[T: CycleA](_ value: T) {}

func main() {
    let value = CycleLeaf[int32] { value: 1 }
    requireCycleA(value)
}
